# wildlife-vision

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
data/: locations.json
gui/: photo_tagger.py
scripts/: camshots_organiser.py  check_duplicates.py  detect_overexposed_ir.py  detection_organiser.py  export_by_detection.py  photos_organiser.py  predict_photo.py  rename_with_detection.py  requirements.txt  train_classifier.py
scripts/utils/: data.py  exif.py  files.py  metadata.py  prompt.py
src/wv/cli/: main.py  presentation.py  runtime.py
src/wv/cli/commands/: clean.py  detect.py  export.py  gui.py  ingest.py  organise.py  pipeline.py  reduce.py  setup.py
src/wv/config/: __init__.py  setup.yml
src/wv/core/: exif.py  files.py  images.py  logging.py  megadetector.py  metadata.py  prompt.py
src/wv/gui/detection_triage/: app.py  controller.py  state.py
src/wv/handlers/: burst_reducer.py  detection_exporter.py  organiser.py  overexposed_ir_detector.py  photo_organiser.py
src/wv/ml/: __init__.py  megadetector.py
src/wv/use_cases/: setup.py
src/wv/use_cases/clean/: bursts.py  corrupted.py  overexposed_ir.py
src/wv/use_cases/detect/: content.py
src/wv/use_cases/ingest/: folder.py  sd.py
src/wv/use_cases/pipeline/: preprocess.py
tests/: conftest.py
tests/cli/: test_main.py  test_setup.py
tests/cli/commands/: test_clean.py  test_detect.py  test_ingest.py
tests/config/: test_config.py
tests/core/: test_exif.py  test_files.py  test_images.py  test_metadata.py
tests/ml/: test_megadetector.py
tests/use_cases/: test_setup_use_case.py
tests/use_cases/clean/: test_bursts.py  test_corrupted.py  test_overexposed_ir.py
tests/use_cases/detect/: test_content.py
tests/use_cases/ingest/: test_sd.py
