[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildlife-vision"
version = "0.1.0"
description = "Offline-first automated image pipelines for wildlife trail camera photos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Angel Martinez" }
]
keywords = ["wildlife", "trail-camera", "image-processing", "exif", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "pillow>=10.0.0",
    "piexif>=1.1.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "prompt-toolkit>=3.0.0",
    "imagehash>=4.3.0",
    "typer>=0.9.0",
    "loguru>=0.7.3",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
wildlife-vision = "wv.cli.main:app"
wv = "wv.cli.main:app"

[project.gui-scripts]
wv-tagger = "wv.gui.photo_tagger:main"

[project.urls]
Homepage = "https://github.com/angelmtztrc/wildlife-vision"
Repository = "https://github.com/angelmtztrc/wildlife-vision"
Issues = "https://github.com/angelmtztrc/wildlife-vision/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wv"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]